--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.49.2",
     "react-icons": "^4.11.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.29.0",
     "typescript": "5.2.2",
     "uuid": "^9.0.1",
