--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "react-icons": "^4.11.0",
     "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.29.0",
+    "react-spinners": "^0.14.1",
+    "sass": "^1.79.4",
     "typescript": "5.2.2",
     "uuid": "^9.0.1",
     "zustand": "^4.5.1"
