--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next-pwa": "^5.6.0",
     "next-seo": "^6.4.0",
     "react": "18.2.0",
+    "react-datepicker": "^7.4.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.49.2",
     "react-icons": "^4.11.0",
