--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "@types/uuid": "^9.0.7",
-    "supabase": "^1.115.4"
+    "supabase": "^1.115.4",
+    "vercel": "^39.1.1"
   }
 }
