--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "sass": "^1.79.4",
     "typescript": "5.2.2",
     "uuid": "^9.0.1",
+    "xlsx": "^0.18.5",
     "zustand": "^4.5.1"
   },
   "devDependencies": {
